<resources>
    <string name="app_name">Questionnaire</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_of_questionnaire">title of questionnaire</string>
    <string name="decription_of_questionnaire">decription of questionnaire</string>

    <string name="start_questionnaire">Start</string>
    <string name="next_question">Next</string>
    <string name="exit_questionnaire">Exit</string>
    <string name="finish_questionnaire">Finish</string>
    <string name="the_question">Question</string>
    <string name="desription_to_question">Desription to question</string>
    <string name="title_activity_questionnaire">ActivityQuestionnaire</string>
    <string name="back_question">Back</string>
    <string name="questionnaire_sourse">questionnaire sourse</string>
    <string name="title_activity_constructor">ConstructorActivity</string>
</resources>
